<resources>
    <string name="app_name">Know Your Government</string>
    <string name="search_location">Change Location</string>
    <string name="infos">Infos</string>
    <string name="copyright">© 2018, Ashish Wagh</string>
    <string name="version">Version 1.0</string>
    <string name="address">Address :</string>
    <string name="email">Email :</string>
    <string name="website">Website :</string>
    <string name="phone">Phone :</string>
</resources>
