<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.assignment4.ashish.knowyourgovernment.AboutActivity"
    android:background="@drawable/about">


    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/app_title"
        android:layout_marginTop="128dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:textColor="@color/colorWhite"
        android:textAlignment="center" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/copyright"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/app_title"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:text="@string/copyright"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/colorWhite"
        android:textStyle="normal|bold" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/version"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textAlignment="center"
        android:text="@string/version"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/copyright"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:textStyle="normal|bold" />

</android.support.constraint.ConstraintLayout>
