<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.assignment4.ashish.knowyourgovernment.OfficialActivity"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:background="#4C2658"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginTop="4dp"
        android:scrollbars="vertical"
        android:scrollbarThumbVertical="@color/colorPrimary"
        android:scrollbarSize="5dip">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/constraintScrollView">

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:text="@string/address"
                android:textAlignment="textStart"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/official_photo"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="7dp"
                android:gravity="start"
                android:text="@string/phone"
                android:textAlignment="textStart"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/official_address"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:text="@string/email"
                android:textAlignment="textStart"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/official_phone"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="6dp"
                android:gravity="start"
                android:text="@string/website"
                android:textAlignment="textStart"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/official_email"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/official_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="start"
                android:textAlignment="textStart"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="@+id/guideline"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/phone"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>


            <TextView
                android:id="@+id/official_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="start"
                android:lines="3"
                android:textAlignment="textStart"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/guideline"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/address" />

            <TextView
                android:id="@+id/official_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="start"
                android:textAlignment="textStart"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="@+id/email"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/guideline"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/official_website"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:gravity="start"
                android:textAlignment="textStart"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/guideline"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/website"
                android:lines="2"/>

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="288dp"
                tools:layout_editor_absoluteY="81dp"
                tools:layout_editor_absoluteX="96dp" />

            <TextView
                android:id="@+id/offcial_office"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/official_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/offcial_office" />

            <TextView
                android:id="@+id/official_party"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:lines="1"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/official_name" />


            <ImageView
                android:id="@+id/official_photo"
                android:layout_width="208dp"
                android:layout_height="180dp"
                app:srcCompat="@mipmap/ic_launcher"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/official_party"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:onClick="photoClick"/>


            <ImageView
                android:id="@+id/youtube"
                android:layout_width="61dp"
                android:layout_height="52dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/official_website"
                android:background="@drawable/youtube"
                app:layout_constraintRight_toLeftOf="@+id/googleplus"
                android:onClick="youtubeClick" />

            <ImageView
                android:id="@+id/googleplus"
                android:layout_width="61dp"
                android:layout_height="52dp"
                android:background="@drawable/googleplus"
                app:layout_constraintTop_toTopOf="@+id/youtube"
                app:layout_constraintRight_toLeftOf="@+id/twitter"
                app:layout_constraintLeft_toRightOf="@+id/youtube"
                android:onClick="googleplusClick"/>

            <ImageView
                android:id="@+id/twitter"
                android:layout_width="61dp"
                android:layout_height="52dp"
                android:background="@drawable/twitter"
                app:layout_constraintTop_toTopOf="@+id/googleplus"
                app:layout_constraintRight_toLeftOf="@+id/facebook"
                app:layout_constraintLeft_toRightOf="@+id/googleplus"
                android:onClick="twitterClick"/>

            <ImageView
                android:id="@+id/facebook"
                android:layout_width="61dp"
                android:layout_height="52dp"
                android:background="@drawable/facebook"
                app:layout_constraintTop_toTopOf="@+id/twitter"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/twitter"
                android:onClick="facebookClick"/>


        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
